iptables-rules.txt
# Generated by iptables-save v1.8.7 on Mon Apr  6 06:04:15 2026
*filter
:INPUT DROP [251:28655]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [114057:47603661]
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -i ens33 -p udp -m udp --dport 51820 -j ACCEPT
-A INPUT -i wg0 -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j DROP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -j DROP
-A INPUT -p tcp -m tcp --dport 22 -m limit --limit 4/min --limit-burst 8 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j DROP
-A INPUT -j LOG --log-prefix "IPT-DROP: "
-A INPUT -p udp -m udp --dport 51820 -j ACCEPT
-A INPUT -i wg0 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -p udp -m udp --dport 51821 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 9090 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 9100 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 3000 -j ACCEPT
-A FORWARD -i wg0 -o ens33 -j ACCEPT
-A FORWARD -i ens33 -o wg0 -j ACCEPT
-A FORWARD -i wg0 -j ACCEPT
-A FORWARD -o wg0 -j ACCEPT
-A FORWARD -i wg0 -j ACCEPT
-A FORWARD -o wg0 -j ACCEPT
-A FORWARD -i wg0 -j ACCEPT
-A FORWARD -o wg0 -j ACCEPT
-A FORWARD -i wg0 -j ACCEPT
-A FORWARD -o wg0 -j ACCEPT
-A FORWARD -i wg0 -j ACCEPT
-A FORWARD -o wg0 -j ACCEPT
-A FORWARD -i wg0 -j ACCEPT
-A FORWARD -o wg0 -j ACCEPT
-A OUTPUT -o wg0 -j ACCEPT
COMMIT
# Completed on Mon Apr  6 06:04:15 2026
# Generated by iptables-save v1.8.7 on Mon Apr  6 06:04:15 2026
*nat
:PREROUTING ACCEPT [235:25103]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [2032:153518]
:POSTROUTING ACCEPT [1551:98316]
-A POSTROUTING -o ens33 -j MASQUERADE
-A POSTROUTING -o ens33 -j MASQUERADE
-A POSTROUTING -o ens33 -j MASQUERADE
-A POSTROUTING -o ens33 -j MASQUERADE
-A POSTROUTING -o ens33 -j MASQUERADE
-A POSTROUTING -o ens33 -j MASQUERADE
COMMIT
# Completed on Mon Apr  6 06:04:15 2026
